--- a/package.json
+++ b/package.json
@@ -6,29 +6,30 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.2.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+
+    "tailwindcss": "^3.4.13",
+    "postcss": "^8.4.38",
+    "autoprefixer": "^10.4.20",
+
     "@fullcalendar/daygrid": "^6.1.19",
     "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
     "axios": "^1.13.2",
     "dayjs": "^1.11.19",
-    "next": "16.0.8",
-    "react": "19.2.1",
     "react-calendar": "^6.0.0",
     "react-datepicker": "^9.0.0",
-    "react-dom": "19.2.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.23",
-    "babel-plugin-react-compiler": "1.0.0",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.8",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18"
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.5"
   }
 }
