--- a/package.json
+++ b/package.json
@@ -9,25 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fullcalendar/daygrid": "^6.1.19",
-    "@fullcalendar/interaction": "^6.1.19",
-    "@fullcalendar/react": "^6.1.19",
-    "autoprefixer": "^10.4.20",
-    "axios": "^1.13.2",
-    "dayjs": "^1.11.19",
-    "next": "14.2.5",
-    "postcss": "^8.4.38",
-    "react": "18.2.0",
-    "react-calendar": "^6.0.0",
-    "react-datepicker": "^9.0.0",
-    "react-dom": "18.2.0",
-    "react-hot-toast": "^2.6.0",
-    "react-icons": "^5.5.0",
-    "tailwindcss": "^3.4.13",
-    "zustand": "^5.0.9"
-  },
-  "devDependencies": {
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.5"
-  }
+  "next": "14.2.5",
+  "react": "18.3.1",
+  "react-dom": "18.3.1"
+},
+"devDependencies": {
+  "tailwindcss": "3.4.13",
+  "postcss": "8.4.38",
+  "autoprefixer": "10.4.20"
+}
+
 }
