--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-  "next": "14.2.5",
-  "react": "18.3.1",
-  "react-dom": "18.3.1"
-},
-"devDependencies": {
-  "tailwindcss": "3.4.13",
-  "postcss": "8.4.38",
-  "autoprefixer": "10.4.20"
-}
-
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "10.4.20",
+    "postcss": "8.4.38",
+    "tailwindcss": "3.4.13"
+  }
 }
