--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dayjs": "^1.11.19",
     "next": "14.2.5",
     "react": "18.3.1",
+    "react-calendar": "^6.0.0",
     "react-dom": "18.3.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0"
