--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "dayjs": "^1.11.19",
     "next": "14.2.5",
     "react": "18.3.1",
     "react-calendar": "^6.0.0",
     "react-dom": "18.3.1",
     "react-hot-toast": "^2.6.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "autoprefixer": "10.4.20",
